--- a/.env
+++ b/.env
@@ -6,14 +6,14 @@
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
-JWT_SECRET = ''
-JWT_REFRESH_SECRET = ''
+JWT_SECRET = 'the-king-also-has-to-cum'
+JWT_REFRESH_SECRET = 'the-kingdom-cum'
 
 
-ApiKey= ""
-AuthDomain= ""
-ProjectId= ""
-StorageBucket= ""
-MessagingSenderId= ""
-AppId= ""
-MeasurementId= ""
+ApiKey= "AIzaSyDtJcUjtP5MXIJiq_29mZqniLAssAkSGPQ"
+AuthDomain= "social-network-a0b1d.firebaseapp.com"
+ProjectId= "social-network-a0b1d"
+StorageBucket= "social-network-a0b1d.appspot.com"
+MessagingSenderId= "849192922914"
+AppId= "1:849192922914:web:b427c947e65ac19059ff7b"
+MeasurementId= "G-77W01Z4QGT"
