--- a/.env
+++ b/.env
@@ -10,10 +10,17 @@ JWT_SECRET = 'the-king-also-has-to-cum'
 JWT_REFRESH_SECRET = 'the-kingdom-cum'
 
 
-ApiKey= "AIzaSyDtJcUjtP5MXIJiq_29mZqniLAssAkSGPQ"
-AuthDomain= "social-network-a0b1d.firebaseapp.com"
-ProjectId= "social-network-a0b1d"
-StorageBucket= "social-network-a0b1d.appspot.com"
-MessagingSenderId= "849192922914"
-AppId= "1:849192922914:web:b427c947e65ac19059ff7b"
-MeasurementId= "G-77W01Z4QGT"
+ApiKey= "AIzaSyDr29PDl_4oiR3lbRp8KSkVIIWd2N6xKYg"
+AuthDomain= "testgame-d8af2.firebaseapp.com"
+ProjectId= "testgame-d8af2"
+StorageBucket= "testgame-d8af2.appspot.com"
+MessagingSenderId= "326023359795"
+AppId= "1:326023359795:web:3a43877a47a1ece720e246"
+MeasurementId= "G-YZKNDSDVST"
+
+
+MAIL_HOST="smtp.gmail.com"
+MAIL_USER="blackcatstudio2024@gmail.com"
+MAIL_PASSWORD="qdep zuli phju pwvv"
+MAIL_FROM=${MAIL_USER}
+MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
