--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/apollo": "^12.0.11",
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -35,14 +37,20 @@
     "@prisma/client": "^5.5.2",
     "apollo-server-express": "^3.13.0",
     "argon2": "^0.31.2",
+    "axios": "^1.6.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.0",
     "graphql-type-json": "^0.3.2",
+    "hbs": "^4.2.0",
     "mongoose": "^8.0.2",
+    "nodemailer": "^6.9.8",
+    "otp-generator": "^4.0.1",
+    "otpauth": "^9.2.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -61,6 +69,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/otp-generator": "^4.0.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
