--- a/.env
+++ b/.env
@@ -21,6 +21,6 @@ MeasurementId= "G-YZKNDSDVST"
 
 MAIL_HOST="smtp.gmail.com"
 MAIL_USER="blackcatstudio2024@gmail.com"
-MAIL_PASSWORD="qdep zuli phju pwvv"
+MAIL_PASSWORD="pqwq zdbm hppb gdfs"
 MAIL_FROM=${MAIL_USER}
 MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
