--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "@nestjs/platform-socket.io": "^10.2.10",
     "@nestjs/typeorm": "^10.0.1",
     "@nestjs/websockets": "^10.2.10",
-    "@prisma/client": "^5.5.2",
     "apollo-server-express": "^3.13.0",
     "argon2": "^0.31.2",
     "axios": "^1.6.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
+    "date-fns": "^3.3.1",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
     "graphql": "^16.8.1",
@@ -54,6 +54,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "qs": "^6.11.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.2",
